tests/snapshots/run_wpt_conformance__trtx_isInfinite_float32_positive_infinity_only.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "is_infinite.https.any.js",
    "isInfinite float32 positive infinity only",
    "trtx",
    Failed {
        msg: Some(
            "is_infinite :: isInfinite float32 positive infinity only: index 0: actual=0 expected=1 tolerance=0\n  inputs: isInfiniteInput: [String(\"Infinity\"), 1, 2.5, -3.7]\n  expected isInfiniteOutput: [1, 0, 0, 0]\n  actual isInfiniteOutput: [0, 0, 128, 63]\n  expected isInfiniteOutput full nd:\n(shape [4])\n[1, 0, 0, 0]\n  actual isInfiniteOutput full nd:\n(shape [4])\n[0, 0, 128, 63]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    isInfiniteInput: f32[4];\n  }\n\n  nodes {\n    [isInfiniteOutput] = isInfinite(isInfiniteInput, label=\"\");\n  }\n\n  outputs { isInfiniteOutput; }\n}\n",
        ),
    },
)
