tests/snapshots/run_wpt_conformance__trtx_isInfinite_float32_special_values.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "is_infinite.https.any.js",
    "isInfinite float32 special values",
    "trtx",
    Failed {
        msg: Some(
            "is_infinite :: isInfinite float32 special values: index 0: actual=0 expected=1 tolerance=0\n  inputs: isInfiniteInput: [String(\"Infinity\"), String(\"-Infinity\"), String(\"NaN\"), 0, 0, 1, -1, 340282346638528900000000000000000000000]\n  expected isInfiniteOutput: [1, 1, 0, 0, 0, 0, 0, 0]\n  actual isInfiniteOutput: [0, 0, 128, 63, 0, 0, 128, 63]\n  expected isInfiniteOutput full nd:\n(shape [8])\n[1, 1, 0, 0, 0, 0, 0, 0]\n  actual isInfiniteOutput full nd:\n(shape [8])\n[0, 0, 128, 63, 0, 0, 128, 63]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    isInfiniteInput: f32[8];\n  }\n\n  nodes {\n    [isInfiniteOutput] = isInfinite(isInfiniteInput, label=\"\");\n  }\n\n  outputs { isInfiniteOutput; }\n}\n",
        ),
    },
)
