tests/snapshots/run_wpt_conformance__trtx_isNaN_float16_special_values.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "is_nan.https.any.js",
    "isNaN float16 special values",
    "trtx",
    Failed {
        msg: Some(
            "is_nan :: isNaN float16 special values: index 0: actual=0 expected=1 tolerance=0\n  inputs: isNaNInput: [String(\"NaN\"), String(\"Infinity\"), String(\"-Infinity\"), 0, 0, 1, -1]\n  expected isNaNOutput: [1, 0, 0, 0, 0, 0, 0]\n  actual isNaNOutput: [0, 0, 128, 63, 0, 0, 0]\n  expected isNaNOutput full nd:\n(shape [7])\n[1, 0, 0, 0, 0, 0, 0]\n  actual isNaNOutput full nd:\n(shape [7])\n[0, 0, 128, 63, 0, 0, 0]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    isNaNInput: f16[7];\n  }\n\n  nodes {\n    [isNaNOutput] = isNaN(isNaNInput, label=\"\");\n  }\n\n  outputs { isNaNOutput; }\n}\n",
        ),
    },
)
